# paper-radar-for-clinicians

./: LICENSE  README.md  pyproject.toml  quickstart_zh.md
configs/: default_weights.yml  topics.example.yml
outputs/gallbladder_and_multimodal/: papers.csv  report.html  report.md  run_metadata.json
paper_radar/: boolean_query.py  cli.py  config.py  emailing.py  engine.py  models.py  plotting.py  query_expansion.py  ranking.py  reporting.py  synthesis.py  utils.py
paper_radar/sources/: __init__.py  arxiv.py  mesh.py  pubmed.py
paper_radar/templates/: report.html.j2
tests/: test_boolean_query.py  test_query_expansion.py  test_ranking.py  test_synthesis.py
